--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.1.0
+@version        1.1.1
 @description    A muted and easy on the eyes style for e621.
 @author         mandorinn
 @preprocessor stylus
@@ -1313,6 +1313,21 @@
     border: 2px solid var(--bg-400)!important;
     left: .5rem;
 	}
+	/* Editing mode */ 
+	div#c-posts div#a-show #edit .edit-submit {
+	background-color: var(--bg)!important;
+	border-radius: 0px 4px 0px 0px;
+	border-top: 2px solid var(--bg-300);
+	border-right: 2px solid var(--bg-300);
+	}
+	div#c-posts div#a-show #edit .edit-submit input {
+		&:hover {
+		background-color: var(--bg-300)!important;
+		}
+	}
+	div.related-tags {
+	background-color: var(--bg-400)!important;
+	}
 	/* Post Description */
 	.styled-dtext blockquote, .styled-dtext div.expandable, .styled-dtext pre {
     background-color:var(--bg)!important;
@@ -2102,6 +2117,11 @@
     border-radius: 2px 8px 8px 2px;
     overflow:hidden;
     word-wrap: break-word;
+		h1 {
+		width: fit-content;
+		margin-inline: auto;
+		margin-bottom: .5rem;
+		}
 	}
 	.user-statistics {
     font-size: .7rem;
@@ -2117,6 +2137,9 @@
     background-color: var(--bg-400)!important;
     border-radius: 2px 8px 8px 2px;
     border-left: .25rem solid var(--elements-highlight)!important;
+	}
+	.user-uploads div.vertical-section {
+	flex-direction: row!important;
 	}
 	picture.picture-container {
     width: 154px;
