--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.1.1
+@version        1.1.2
 @description    A muted and easy on the eyes style for e621.
 @author         mandorinn
 @preprocessor stylus
@@ -1145,6 +1145,13 @@
 	#re-enable-all-blacklists *, #sidebar #blacklist-box #re-enable-all-blacklists {
     color: var(--favorite-button)!important;
 	}
+	.styled-dtext div.blacklisted {
+	margin: .5rem 0!important;
+	}
+	#image-container.blacklisted, .styled-dtext div.post-thumbnail.blacklisted.dtext[data-status="active"] {
+	overflow:hidden;
+	border-radius: 4px!important;
+	}
 	.blacklisted {
 		.picture-container {
 		position: relative;
@@ -1476,6 +1483,7 @@
 		width: fit-content;
 		margin-left: auto;
 		margin-bottom: .5rem;
+		margin-top: auto;
 		bottom: 0;
 		font-size: .75rem;
 		user-select: none;
@@ -1557,6 +1565,67 @@
 		}
 	}
 	/* Forums */
+	table.striped tr.forum-topic-row > td:nth-child(1) {
+	display: flex;
+	align-items: center;
+		.sticky {
+		margin-left:.25rem;
+		display:flex;
+		align-items: center;
+		justify-content: center;
+		position:relative;
+		font-size:0!important;
+		width:20px;
+		}
+		.sticky::after {
+		content:url("data:image/svg+xml,%3Csvg height='24.0' viewBox='0 0 24.0 24.0' width='24.0' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M22 12.3698L11.6302 2L10.1479 3.4802L11.6302 4.9625L6.4448 10.1469V10.149L4.9625 8.6667L3.4813 10.149L7.926 14.5927L2 20.5177L3.4813 21.999L9.4073 16.074L13.8521 20.5177L15.3333 19.0365L13.8521 17.5552L19.0365 12.3698H19.0375L20.5188 13.851L22 12.3698Z' fill='%23ffffffff'/%3E%3C/svg%3E");
+		position:absolute;
+		bottom: -.75rem;
+		mix-blend-mode: soft-light;
+		}
+		.new {
+		margin-left:.25rem;
+		display:flex;
+		align-items: center;
+		justify-content: center;
+		position:relative;
+		font-size:0!important;
+		width:30px;
+		}
+		.new::after {
+		content:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' enable-background='new 0 0 24 24' height='24px' viewBox='0 0 24 24' width='24px' fill='%23ffffff'%3E%3Cg%3E%3Crect fill='none' height='24' width='24'/%3E%3C/g%3E%3Cg%3E%3Cg%3E%3Ccircle cx='19' cy='3' r='3'/%3E%3Cpath d='M6 8V6h9.03c-1.21-1.6-1.08-3.21-0.92-4H4.01c-1.1 0-2 0.89-2 2L2 22l4-4h14c1.1 0 2-0.9 2-2V6.97 C21.16 7.61 20.13 8 19 8H6z M14 14H6v-2h8V14z M18 11H6V9h12V11z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+		position:absolute;
+		bottom: -.75rem;
+		mix-blend-mode: soft-light;
+		}
+		.forum-post-link {
+		margin-right: .25rem!important;
+		margin-left: .25rem!important;
+		color: var(--content-link)!important;
+		}
+		.forum-post-link:hover {
+		color: var(--content-link-hover)!important;
+		}
+		
+		.last-page {
+		margin-right: 20%;
+		margin-left: .5rem;
+		position:relative;
+		display:flex;
+		align-items: center;
+		color: var(--base-text-faded)!important;
+			&:hover {
+			color: var(--base-text)!important;
+			}
+		}
+		.last-page::after {
+		content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='20px' viewBox='0 0 20 20' width='20px' fill='%23ffffff'%3E%3Cpath d='M0 0h24v24H0V0z' fill='none'/%3E%3Cpath d='M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z'/%3E%3C/svg%3E");
+		opacity: .3
+		}
+		.last-page:hover::after {
+		opacity: .7;
+		}
+	}
 	div.list-of-forum-posts {
 		.comment-post-grid{
 		background-color: var(--bg)!important;
@@ -1670,6 +1739,7 @@
 		width: fit-content;
 		margin-left: auto;
 		margin-bottom: .5rem;
+		margin-top: auto;
 		bottom: 0;
 		font-size: .75rem;
 		user-select: none;
@@ -1909,6 +1979,40 @@
 	button.rating-s.active {
 	background-color: var(--favorite-button)!important;
 	}
+	/* Site map */
+
+	#a-site-map {
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	margin-inline: auto;
+	background-color: var(--bg)!important;
+	padding: 2rem;
+	border-radius: 8px;
+	gap: .5rem;
+		section {
+		max-width: calc(15% + 1rem)!important;
+		background-color: var(--bg-400);
+		padding: 2rem;
+		border-radius: 8px;
+		}
+		h1 {
+		border-bottom: 1px solid var(--bg)!important;
+		margin-inline: auto;
+		text-align: center;
+		padding-bottom: .25rem;
+		font-size: 1.175rem!important;
+		}
+		ul li:nth-child(n + 2) {
+		margin-top: .3rem;
+		border-bottom: 1px solid var(--base-text-faded);
+		width: fit-content;
+		}
+	}
+	/* Wiki page */ 
+	button#wiki-page-copy-tag {
+	border: none;
+	}
 	/* Confirm you're not a robot page */
 	.message {
 	position:absolute;
@@ -2075,11 +2179,14 @@
     display:flex;
     background-color: var(--bg)!important;
     border-radius: 1rem;
+	justify-content: space-around;
 	}
 .post-thumbnail {
     display:flex;
     align-items: center;
     justify-content: center;
+	width: fit-content;
+	margin-inline: auto;
 	}
 	.post-thumbnail a img {
     object-fit: cover;
@@ -2096,6 +2203,7 @@
     flex-direction: column;
     border-radius: 1rem;
     width: fit-content;
+	margin-inline: auto;
 	}
 	div#c-users div#a-show .profile-container .stats-section .profile-stats {
     width: fit-content;
@@ -2103,13 +2211,6 @@
     margin-inline: auto;
     margin-top: 1rem;
     }
-	div#c-users div#a-show .profile-container .stats-section .profile-stats h1 .user-member {
-    margin-inline: auto;
-    display:block;
-    width: fit-content;
-    position:relative;
-    margin-bottom: 1rem;
-	}
 	div#c-users div#a-show .profile-stats {
     background-color: var(--bg-400)!important;
     border-left: .25rem solid var(--elements-highlight)!important;
@@ -2118,9 +2219,13 @@
     overflow:hidden;
     word-wrap: break-word;
 		h1 {
-		width: fit-content;
+		width: 100%;
 		margin-inline: auto;
 		margin-bottom: .5rem;
+		padding-bottom: .5rem;
+		display: flex;
+		place-content: center;
+		border-bottom: 1px solid var(--bg-300);
 		}
 	}
 	.user-statistics {
@@ -2153,6 +2258,7 @@
 	}
 	article.post-preview.captioned .desc {
     width: 100%;
+	background-color: var(--bg)!important;
 	}
 	article.post-preview img {
     object-fit: cover;
