--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.1.2
+@version        1.1.3
 @description    A muted and easy on the eyes style for e621.
 @author         mandorinn
 @preprocessor stylus
@@ -665,9 +665,9 @@
     margin-top: .2rem;
     margin-left: .05rem;
 	}
-	#sidebar > div:nth-child(2) {
+	/*#sidebar > div:nth-child(2) {
     display:none;
- 	}
+ 	}*/
 	.color-muted {
 		color: var(--base-text)!important;
 		opacity: .5;
