--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -4,6 +4,7 @@
 @version        1.1.7
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn
+@updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
 @preprocessor stylus
 ==/UserStyle== */
 
