--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.1.8
+@version        1.1.9
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn (www.mandorinn.dev)
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -1551,7 +1551,7 @@
 				font-size: 1.5rem;
 				}
 			}
-	.spoiler {
+	.spoiler, .dtext-container .spoiler {
 	background: #1a1a1a!important;
 	color: transparent!important;
 	text-shadow: none!important;
@@ -1563,8 +1563,9 @@
 		color: var(--base-text)!important;
 		}
 	}
-	.spoiler .dtext-link {
+	.dtext-container .spoiler .dtext-link, .spoiler {
 	color: #1a1a1a!important;
+	text-shadow: none!important;
 	transition: 100ms;
 	}
 	 .spoiler:hover .dtext-link {
@@ -2049,6 +2050,31 @@
 	}	
 	div.dtext-formatter[data-editing="true"] div.dtext-formatter-charcount {
 		color: var(--base-text)!important
+	}
+	a.expand-comment-response {
+	position: relative;
+	height:0;
+	width:fit-content;
+	display:flex;
+	align-items:center;
+	gap: .25rem;
+	padding: 1rem;
+	font-size:0;
+	background-color: var(--bg)!important;
+	border-radius: 2px 8px 8px 8px;
+	border: 2px solid var(--bg);
+		&:hover {
+		background-color: var(--bg-400)!important;
+		}
+		&::before {
+		content: "Post comment";
+		font-size: 1.2rem;
+		}
+		&::after {
+		content: url("data:image/svg+xml,%3Csvg height='24.0' viewBox='0 0 24.0 24.0' width='24.0' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10 8.2667V4L3 11.4667L10 18.9333V14.56C15 14.56 18.5 16.2667 21 20C20 14.6667 17 9.3333 10 8.2667Z' fill='%23c8c8c8'/%3E%3C/svg%3E");
+		opacity: 1;
+		mix-blend-mode: luminosity;
+		}
 	}
 /* Help Pages */ 
 	#c-help {
