--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.1.9
+@version        1.2.0
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn (www.mandorinn.dev)
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -1569,6 +1569,9 @@
 	transition: 100ms;
 	}
 	 .spoiler:hover .dtext-link {
+	color: var(--content-link)!important;
+	}
+	.spoiler:hover .dtext-link:hover {
 	color: var(--content-link-hover)!important;
 	}
 	.user-warning em {
@@ -2170,6 +2173,17 @@
 	/* Wiki page */ 
 	button#wiki-page-copy-tag {
 	border: none;
+	}
+	.ui-state-highlight {
+	background-color: var(--bg)!important;
+	color: var(--base-text)!important;
+	border-top: none!important;
+	border-right: none!important;
+	border-bottom: none!important;
+	border-left: .25rem solid var(--elements-highlight)!important;
+	border-radius: 2px 8px 8px 2px;
+	font-size: .8rem!important;
+	width: fit-content;
 	}
 	/* Confirm you're not a robot page */
 	.message {
